@@ -1,0 +1,19 @@
+##*****************************************************************************
+## $Id: ac_gpl_licensed.m4,v 1.1 2003/02/17 02:29:41 dun Exp $
+##*****************************************************************************
+#  AUTHOR:
+#    Chris Dunlap <cdunlap@llnl.gov>
+#
+#  SYNOPSIS:
+#    AC_GPL_LICENSED
+#
+#  DESCRIPTION:
+#    Acknowledge being licensed under terms of the GNU General Public License.
+##*****************************************************************************
+
+AC_DEFUN([AC_GPL_LICENSED],
+[
+  AC_DEFINE([GPL_LICENSED], 1,
+    [Define to 1 if licensed under terms of the GNU General Public License.]
+  )
+])
